fixed missing background gradient

--- a/express/blocks/floating-panel/floating-panel.css
+++ b/express/blocks/floating-panel/floating-panel.css
@@ -6,7 +6,6 @@ div[class='section section-wrapper floating-panel-container'] {
 .block.floating-panel {
     position: fixed;
     margin-bottom: 24px;
-    overflow: hidden;
     bottom: 0;
     color: var(--color-white);
     left: 50%;
@@ -26,7 +25,6 @@ div[class='section section-wrapper floating-panel-container'] {
     width: 100vw;
     height: 150px;
     left: 50%;
-    background-origin: padding-box;
     bottom: -24px;
     transform: translateX(-50%) translateZ(-1px);
     position: fixed;
@@ -45,6 +43,7 @@ div[class='section section-wrapper floating-panel-container'] {
     justify-content: space-between;
     background: var(--color-black);
     padding: 0 24px 24px 24px;
+    border-radius: 0 0 20px 20px;
     max-height: 56px;
     transition: background-color 0.4s;
 }
@@ -57,6 +56,7 @@ div[class='section section-wrapper floating-panel-container'] {
     overflow: hidden;
     background: #F8F8F8;
     padding: 24px 24px 0 24px;
+    border-radius: 20px 20px 0 0;
     background: var(--color-black);
     color: var(--color-black);
     transition: max-height 0.4s, background-color 0.4s;
